--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./:/app  
+      - ./:/app 
+      - ./db.sqlite:/app/db.sqlite 
     environment:
       - HOLA=MUNDO
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
@@ -13,4 +14,3 @@ services:
 
 networks:
   redlocal:
-
